// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon (React) > Snapshots > should match snapshot for custom sized icon 1`] = `
<svg
  class="inline-block w-8 h-8"
  fill="none"
  stroke="#0066cc"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M5 12h14"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon (React) > Snapshots > should match snapshot for default icon 1`] = `
<svg
  class="inline-block w-5 h-5"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M5 12h14"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;
